fixes spacing

--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@ main{
   width:60%;
   margin: 0 auto;
 }
+
+.separator-2 {
+  margin-top: 20px;
+  border-top: 2px solid #000; 
+}
+.profile-picture {
+  padding: 20px 0;
+}
+
 .one-two-header p{
   font-size: 45px;
   text-align: left;
@@ -54,7 +63,7 @@ main{
 }
 
 .above-pizza-image {
-  margin: 25px 0 25px 0;
+  margin: 0;
   text-align: left;
 }
 .h1-text{
@@ -142,8 +151,10 @@ footer {
   align-items: center;
 }
 
+
+/* 3/21 new css */
 .delicious-text {
-  margin-bottom: 0
+  margin-bottom: 0;
   margin-top: 0; 
 }
 
@@ -154,15 +165,15 @@ footer {
 }
 
 .h1-text {
-  font-size: 35px; 
-  margin-bottom: 0;
-  line-height: 1;
+  font-size: 35px; /* Adjust the size as needed */
+  margin-bottom: 0; /* Removes the bottom margin */
+  line-height: 1; /* Adjust line height for tighter spacing */
 }
 
 .h1-text h6 {
   color: rgb(175, 174, 174);
-  margin-top: 0; 
-  font-size: 17px; 
+  margin-top: 0; /* Removes the top margin */
+  font-size: 17px; /* Adjust the size as needed */
 }
 
 .header-bottom {
@@ -180,4 +191,20 @@ footer {
   margin: 0;
   padding: 0;
 }
+
+.profile-picture {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.profile-picture figure {
+  margin-right: 5px; /* Adjust as needed for spacing */
+  flex-shrink: 0; /* Prevent the image from shrinking */
+}
+
+.profile-picture div {
+  text-align: left; /* Align text to the left */
+}
+
 
